CrOS: Don't show auto-hidden shelf due to volume change.

Bug: 729188
Change-Id: Ibaf8ff66036ccd5621586dc0e4795028512778a6
Reviewed-on: https://chromium-review.googlesource.com/523267
Reviewed-by: Terry Anderson <tdanderson@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477094}
Former-commit-id: 593f82d4b2351c8f7a3eb4081839f8171ed04b36