ash/system/status_area_widget.cc
@@ -148,8 +148,13 @@ void StatusAreaWidget::UpdateAfterLoginStatusChange(LoginStatus login_status) {
 }
 
 bool StatusAreaWidget::ShouldShowShelf() const {
-  return (system_tray_ && system_tray_->ShouldShowShelf()) ||
-         views::TrayBubbleView::IsATrayBubbleOpen();
+  // The system tray bubble may or may not want to force the shelf to be
+  // visible.
+  if (system_tray_ && system_tray_->IsSystemBubbleVisible())
+    return system_tray_->ShouldShowShelf();
+
+  // All other tray bubbles will force the shelf to be visible.
+  return views::TrayBubbleView::IsATrayBubbleOpen();
 }
 
 bool StatusAreaWidget::IsMessageBubbleShown() const {
