ash/system/audio/tray_audio_unittest.cc
@@ -4,8 +4,10 @@
 
 #include "ash/system/audio/tray_audio.h"
 
+#include "ash/system/status_area_widget.h"
 #include "ash/system/tray/system_tray.h"
 #include "ash/test/ash_test_base.h"
+#include "ash/test/status_area_widget_test_helper.h"
 
 namespace ash {
 
@@ -20,12 +22,20 @@ TEST_F(TrayAudioTest, ShowPopUpVolumeView) {
   EXPECT_FALSE(tray_audio->volume_view_for_testing());
   EXPECT_FALSE(tray_audio->pop_up_volume_view_for_testing());
 
+  // When set to autohide, the shelf shouldn't be shown.
+  StatusAreaWidget* status = StatusAreaWidgetTestHelper::GetStatusAreaWidget();
+  EXPECT_FALSE(status->ShouldShowShelf());
+
   // Simulate ARC asking to show the volume view.
   TrayAudio::ShowPopUpVolumeView();
 
   // Volume view is now visible.
   EXPECT_TRUE(tray_audio->volume_view_for_testing());
   EXPECT_TRUE(tray_audio->pop_up_volume_view_for_testing());
+
+  // This does not force the shelf to automatically show. Regression tests for
+  // crbug.com/729188
+  EXPECT_FALSE(status->ShouldShowShelf());
 }
 
 }  // namespace ash
